2025/Mycpp/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
00:19:17 **** Rebuild of configuration Debug for project CH2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CH2.o" "..\\src\\CH2.cpp" 
g++ -o CH2.exe "src\\CH2.o" 
00:19:17 **** Rebuild of configuration Debug for project CH3_1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CH3_1.o" "..\\src\\CH3_1.cpp" 
g++ -o CH3_1.exe "src\\CH3_1.o" 
00:19:19 **** Rebuild of configuration Debug for project CH3_2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CH3_2.o" "..\\src\\CH3_2.cpp" 
g++ -o CH3_2.exe "src\\CH3_2.o" 
00:19:19 **** Rebuild of configuration Debug for project CH4_1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\CH4_1.o" "..\\src\\CH4_1.cpp" 
..\src\CH4_1.cpp: In member function 'void MultiManager::currentUser()':
..\src\CH4_1.cpp:330:24: error: no matching function for call to 'CurrentUser::CurrentUser(Person&)'
      CurrentUser(person).run();
                        ^
..\src\CH4_1.cpp:232:5: note: candidate: CurrentUser::CurrentUser(Person*)
     CurrentUser(Person * pUser): pUser{} { }  // user(u)는 this->user = u 와 동일한 기능
     ^~~~~~~~~~~
..\src\CH4_1.cpp:232:5: note:   no known conversion for argument 1 from 'Person' to 'Person*'
..\src\CH4_1.cpp:226:7: note: candidate: constexpr CurrentUser::CurrentUser(const CurrentUser&)
 class CurrentUser
       ^~~~~~~~~~~
..\src\CH4_1.cpp:226:7: note:   no known conversion for argument 1 from 'Person' to 'const CurrentUser&'
..\src\CH4_1.cpp:226:7: note: candidate: constexpr CurrentUser::CurrentUser(CurrentUser&&)
..\src\CH4_1.cpp:226:7: note:   no known conversion for argument 1 from 'Person' to 'CurrentUser&&'
00:19:20 **** Rebuild of configuration Debug for project EX_CH2 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX_CH2.o" "..\\src\\EX_CH2.cpp" 
g++ -o EX_CH2.exe "src\\EX_CH2.o" 
00:19:20 **** Rebuild of configuration Debug for project EX_CH3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX_CH3.o" "..\\src\\EX_CH3.cpp" 
g++ -o EX_CH3.exe "src\\EX_CH3.o" 
00:19:21 **** Rebuild of configuration Debug for project EX_CH3_1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX_CH3_1.o" "..\\src\\EX_CH3_1.cpp" 
g++ -o EX_CH3_1.exe "src\\EX_CH3_1.o" 
00:19:21 **** Rebuild of configuration Debug for project EX_CH4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX_CH4.o" "..\\src\\EX_CH4.cpp" 
g++ -o EX_CH4.exe "src\\EX_CH4.o" 
00:19:22 **** Rebuild of configuration Debug for project EX_CH4_1 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EX_CH4_1.o" "..\\src\\EX_CH4_1.cpp" 
g++ -o EX_CH4_1.exe "src\\EX_CH4_1.o" 
